<resources>
    <string name="app_name">MyNote</string>
    <string name="weather">Today</string>
    <string name="weather_country">Country</string>
    <string name="weather_status">Status</string>
    <string name="weather_tempa">Temperature</string>
    <string name="weather_humidity">Humidity</string>
    <string name="add_note">Add a note</string>
    <string name="tbar_addnote">Add Notes</string>
    <string name="tbar_addreminder">Add Reminders</string>
    <string name="title">Title</string>
    <string name="notee">Note</string>
    <string name="add">Add</string>
    <string name="note">Notes</string>
    <string name="calendar">Calendar</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="home">Home</string>
    <string name="takePhoto">Take Photo</string>
    <string name="photoLibrary">Photo Library</string>
    <string name="mynote">My notes</string>
    <string name="search">Search</string>
    <string name="add_reminder">Add a reminder</string>
    <string name="myReminder">My reminders</string>
    <string name="done">Done</string>
    <string name="choosedate">Choose Date</string>

</resources>
