<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        app:title="@string/tbar_addreminder"
        android:background="@color/colorPrimary"
        android:id="@+id/tbar_addReminder"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/tbar_addReminder"
        android:id="@+id/textInputLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput"
                android:layout_below="@+id/tbar_addReminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_noteReminder"
                    android:hint="@string/notee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <ScrollView
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_above="@+id/ll_button"
        android:layout_below="@+id/textInputLinear"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TimePicker
                android:visibility="visible"
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TimePicker>

            <DatePicker
                android:visibility="invisible"
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </DatePicker>

        </FrameLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_margin="15dp"
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <Button
            android:id="@+id/bt_doneReminder"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:text="@string/done"
            android:background="@drawable/button_donereminder"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/bt_chooseDate"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:text="@string/choosedate"
            android:background="@drawable/button_datepicker"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>


</RelativeLayout>